--- a/DiveComp.Data/DiveComp.Data.csproj
+++ b/DiveComp.Data/DiveComp.Data.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.5" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-beta.1" />
   </ItemGroup>
 
 </Project>
