--- a/DiveCompAPI/DiveCompAPI.csproj
+++ b/DiveCompAPI/DiveCompAPI.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-beta.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
   </ItemGroup>
