--- a/DiveCompMVC/appsettings.json
+++ b/DiveCompMVC/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": { "DbContextString": "server=localhost;user id=root;database=DiveComp;persistsecurityinfo=True;allowuservariables=True;password=1234" }
 }
